homework4/deployment-settings-clusterip.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
    name: vparking-settings-deployment
spec:
    replicas: 3
    selector:
       matchLabels:
          app: vparking-settings-app
    template:
       metadata:
          labels:
             app: vparking-settings-app
       spec:
          containers:
          - name: settings
            image: reagafonov/vparking-settings-arm64:v20

            ports:
              - containerPort: 8080
