homework4/service-settings-clusterip.yaml
apiVersion: v1
kind: Service
metadata:
  name: vparking-settings-service
spec:
  selector:
    app: vparking-settings-app
  ports:
    - protocol: TCP
      port: 8000
      targetPort: 8080
  type: ClusterIP
