homework4/ingress-settings-clusterip.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: vparking-settings-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
  ingressClassName: nginx
  rules:
  - host: arch.homework
    http:
      paths:
        - pathType: Prefix
          path: /settings/(.*)
          backend:
            service:
              name: vparking-settings-service
              port:
                number: 8000
